--- a/templates/home.html
+++ b/templates/home.html
@@ -13,8 +13,8 @@
 </script>
 
 <script>
-    // Redirect to mobile version if screen is small
-    if (window.innerWidth <= 768) {
+    // Redirect to mobile version if screen is small OR mobile device
+    if (window.innerWidth <= 768 || /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
         window.location.href = '/?device=mobile';
     }
 </script>
