--- a/templates/home.html
+++ b/templates/home.html
@@ -77,10 +77,11 @@
     "@type": "AggregateRating",
     "ratingValue": "4.8",
     "ratingCount": "1243"
-  }
+  },
+  "datePublished": "2024-06-01",
+  "dateModified": "2025-10-30"
 }
 </script>
-
 
 <script type="application/ld+json">
 {
@@ -118,9 +119,12 @@
       "name": "Character Design AI",
       "description": "Generate anime, cyberpunk, and fantasy character variations"
     }
-  ]
+  ],
+  "datePublished": "2024-06-01",
+  "dateModified": "2025-10-30"
 }
 </script>
+
 
 
     <style>
