--- a/templates/new_russian_desktop.html
+++ b/templates/new_russian_desktop.html
@@ -78,7 +78,10 @@
     "@type": "AggregateRating",
     "ratingValue": "4.8",
     "ratingCount": "1243"
-  }
+  },
+  "datePublished": "2024-06-01",
+  "dateModified": "2025-10-30",
+  "inLanguage": "ru"
 }
 </script>
 
@@ -118,9 +121,13 @@
       "name": "ИИ для дизайна персонажей",
       "description": "Генерируйте аниме-, киберпанк- и фэнтези-персонажей"
     }
-  ]
+  ],
+  "datePublished": "2024-06-01",
+  "dateModified": "2025-10-30",
+  "inLanguage": "ru"
 }
 </script>
+
 
 
     <style>
