--- a/templates/home.html
+++ b/templates/home.html
@@ -8908,6 +8908,22 @@
 						        <span class="feature-badge premium">✨ Premium</span>
 						    </div>
 						</a>
+
+						 <a target="_blank" href="/sora" class="feature-item">
+						    <div class="feature-icon-box">
+						        <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+						            <polygon points="23 7 16 12 23 17 23 7"></polygon>
+						            <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+						        </svg>
+						    </div>
+						    <div class="feature-content">
+						        <div class="feature-name">Google Veo 3 Video Generator/div>
+						        <div class="feature-desc">Create AI videos from text prompts</div>
+						        <span class="feature-badge new">✨ New Feature Visit Now</span>
+						    </div>
+						</a>
+
+						
 <!-- 
                         <a target="_blank" href="#" class="feature-item">
                             <div class="feature-icon-box">
