--- a/templates/nano_pricing.html
+++ b/templates/nano_pricing.html
@@ -626,7 +626,7 @@
         };
         
         // Call your Razorpay backend
-        const response = await fetch('https://chatezzy.com/api/create-razorpay-order-pro', {
+        const response = await fetch('https://googlenanobanana.com/api/create-razorpay-order-pro', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
