--- a/templates/veo_ext.html
+++ b/templates/veo_ext.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BBJS30VN6N"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ345FT3ZE"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-BBJS30VN6N');
+
+      gtag('config', 'G-XQ345FT3ZE');
     </script>
 
     <meta charset="UTF-8">
