--- a/templates/home.html
+++ b/templates/home.html
@@ -9002,10 +9002,10 @@
             </div>
 
            
-<a id="bugReportBtn">Report Bug</a>
-<a href="/new_playground" target="_blank" class="bug-link hide-mobile">
-  New PlayGround <span class="new-badge">NEW</span>
-</a>
+	<a id="bugReportBtn">Report Bug</a>
+	<a href="/nanobananapro" target="_blank" class="bug-link hide-mobile">
+	  Nano Banana Pro <span class="new-badge">NEW</span>
+	</a>
 
 
 
